# curri-fsm

./: Cargo.toml  LICENSE  rustfmt.toml
src/: c_binding.rs  c_bindings.rs  curri_fsm.h  fsm.rs  lib.rs
