[package]
name = "curri-fsm"
version = "0.1.1"
edition = "2021"
description = "A simple Functional Programming Finite State Machine With curri."
license = "MIT"
repository = "https://github.com/kirigirihitomi/curri-fsm.git"
authors = ["kirigirihitomi <448350599infw@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curri = "^0.1.0"
